# SpaceInvaders

./: .clang-format  .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeSettings.json  Makefile  README.md  cmake_install.cmake  rebuild.sh  remake.sh  run.sh  run_format.sh
dep/find_cmake/: FindSDL2_ttf.cmake
docs/: OpcodesSpreadsheet.xcf
log/: log.txt
rom/: invaders.h
src/: entry.c
src/core/: cpu.c  cpu.h  cpu_opcodes.c  cpu_opcodes.h  gpu.c  manager.c  manager.h  mem.c  mem.h  tests.c
src/headers/: cpu.h  cpu_opcodes.h  file.h  gpu.h  headers.h  log.h  manager.h  mem.h  tests.h
src/io/: file.c  log.c
src/tests/: tests.c
